--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,7 +1,7 @@
 /* YOUR CUSTOM STYLES */
 
 .intro-2 {
-    background: url(http://mdbootstrap.com/img/Photos/Others/img%20(42).jpg)no-repeat center center;
+    background: url(http://mdbootstrap.com/img/Photos/Others/img%20\(42\).jpg)no-repeat center center;
     background-size: cover;
 }
 .top-nav-collapse {
